--- a/MPfm/MPfm.iOS/XIB/iPhone/PlayerViewController_iPhone.xib
+++ b/MPfm/MPfm.iOS/XIB/iPhone/PlayerViewController_iPhone.xib
@@ -47,7 +47,7 @@
 							<object class="IBUILabel" id="824166459">
 								<reference key="NSNextResponder" ref="884086151"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{8, 2}, {70, 21}}</string>
+								<string key="NSFrame">{{8, 1}, {70, 21}}</string>
 								<reference key="NSSuperview" ref="884086151"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="635662649"/>
@@ -161,7 +161,7 @@
 							<object class="IBUILabel" id="374741439">
 								<reference key="NSNextResponder" ref="884086151"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{247, 2}, {66, 21}}</string>
+								<string key="NSFrame">{{247, 1}, {66, 21}}</string>
 								<reference key="NSSuperview" ref="884086151"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1068139918"/>
@@ -217,7 +217,7 @@
 								<reference key="NSNextResponder" ref="473782587"/>
 								<int key="NSvFlags">268</int>
 								<array class="NSMutableArray" key="NSSubviews"/>
-								<string key="NSFrameSize">{320, 289}</string>
+								<string key="NSFrameSize">{320, 296}</string>
 								<reference key="NSSuperview" ref="473782587"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="397099332"/>
@@ -247,7 +247,7 @@
 										<int key="IBUINumberOfPages">3</int>
 									</object>
 								</array>
-								<string key="NSFrame">{{0, 289}, {320, 19}}</string>
+								<string key="NSFrame">{{0, 296}, {320, 19}}</string>
 								<reference key="NSSuperview" ref="473782587"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1019235992"/>
@@ -261,7 +261,7 @@
 							<object class="IBUIButton" id="404078540">
 								<reference key="NSNextResponder" ref="473782587"/>
 								<int key="NSvFlags">268</int>
-								<string key="NSFrame">{{0, 306}, {106, 41}}</string>
+								<string key="NSFrame">{{0, 315}, {106, 41}}</string>
 								<reference key="NSSuperview" ref="473782587"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="380727636"/>
@@ -294,7 +294,7 @@
 							<object class="IBUIButton" id="380727636">
 								<reference key="NSNextResponder" ref="473782587"/>
 								<int key="NSvFlags">268</int>
-								<string key="NSFrame">{{106, 306}, {108, 41}}</string>
+								<string key="NSFrame">{{106, 315}, {108, 41}}</string>
 								<reference key="NSSuperview" ref="473782587"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="394709427"/>
@@ -317,9 +317,10 @@
 							<object class="IBUIButton" id="394709427">
 								<reference key="NSNextResponder" ref="473782587"/>
 								<int key="NSvFlags">268</int>
-								<string key="NSFrame">{{214, 306}, {106, 41}}</string>
+								<string key="NSFrame">{{214, 315}, {106, 41}}</string>
 								<reference key="NSSuperview" ref="473782587"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="727961586"/>
 								<bool key="IBUIOpaque">NO</bool>
